refactor: clean backend — dead code, BaseController, bug fixes (Java 21 style)
Dead code removed:
- Delete AuthService, AuthRequest, RegisterRequest (email/password auth was dead)
- Delete CursorPage DTO (cursor pagination never wired in)
- Delete StorageConfig (dead resource handler shadowed by StorageController)
- Remove 2 dead JwtService overloads (generateToken(String) and (UserDetails,Map))
- Remove dev-only POST /api/notifications/test endpoint

BaseController (DRY pattern):
- New abstract BaseController with currentUserId/currentUser helpers (@Autowired UserRepository)
- 13 controllers extended: Post, Course, Comment, Notification, Block, Grade,
  Timetable, Form, CourseGroup, CoursePost, Session, Support, User
- Eliminates 13 copies of identical private currentUserId() + UserRepository injection

Bug fixes:
- UserController.update + uploadAvatar: add ownership check (403 if not self)
- BlockController.block: replace existsBy + findBy double-query with single findBy
- GeoIpService.isPrivate: fix 172.x range (was all 172.x.x.x, now 172.16-172.31 only)
- UserService.search: replace findAll() full-table scan with JPQL LIKE query
- UserProvisioningService: eliminate double findByEmail call in create loop
- GlobalExceptionHandler: add explicit NotFoundException -> 404 handler
- CoursePostController.create: currentUser() replaces 2 separate DB calls

Shared utilities:
- New IpUtils.extractIp() — replaces identical private method in SessionService and RateLimitFilter
- New NotFoundException — proper 404 from BaseController.currentUser()
- UserRepository.searchByNameOrUsername JPQL query

Java 21 style:
- .collect(Collectors.toList()) → .toList() across all service/security files (7 files)
- Remove all now-unused import java.util.stream.Collectors

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>