@@ -1,7 +1,6 @@
 package com.myiu.portal.controller;
 
 import com.myiu.portal.dto.*;
-import com.myiu.portal.repository.UserRepository;
 import com.myiu.portal.service.TimetableService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
@@ -10,25 +9,19 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
-public class TimetableController {
+public class TimetableController extends BaseController {
 
     private final TimetableService timetableService;
-    private final UserRepository userRepository;
-
-    private UUID currentUserId(UserDetails principal) {
-        return userRepository.findByEmail(principal.getUsername()).orElseThrow().getId();
-    }
 
     @GetMapping("/api/timetable")
     public ResponseEntity<ApiResponse<List<TimetableEntryDTO>>> getMyTimetable(
             @AuthenticationPrincipal UserDetails principal) {
         UUID userId = currentUserId(principal);
         List<String> roles = principal.getAuthorities().stream()
-                .map(a -> a.getAuthority()).collect(Collectors.toList());
+                .map(a -> a.getAuthority()).toList();
         return ResponseEntity.ok(ApiResponse.ok(timetableService.getForUser(userId, roles)));
     }
 
